Add theme toggle functionality with dark/light mode switching
- Implemented theme toggle button with emoji icons (🌙/🌞) in top-right corner
- Added complete dark/light theme support with CSS variables for all UI elements
- Fixed static file caching by using DevStaticFiles for development
- Added theme persistence using localStorage
- Enhanced accessibility with proper ARIA labels and keyboard support
- Updated version numbers for cache busting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Course Materials Assistant</title>
-    <link rel="stylesheet" href="style.css?v=14">
+    <link rel="stylesheet" href="style.css?v=16">
 </head>
 <body>
     <div class="container">
@@ -58,6 +58,10 @@
 
             <!-- Main Chat Area -->
             <main class="chat-main">
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                    <span class="sun-icon">🌞</span>
+                    <span class="moon-icon">🌙</span>
+                </button>
                 <div class="chat-container">
                     <div id="chatMessages" class="chat-messages"></div>
                     <div class="chat-input-container">
@@ -81,6 +85,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="script.js?v=13"></script>
+    <script src="script.js?v=15"></script>
 </body>
 </html>
